# do-folder

./: .gitignore  .readthedocs.yaml  README.md  README.zh-cn.md  __init__.py  build-doc.bat  build-doc.ps1  build-doc.sh  buildDoc.py  compare.py  main.py  pylintrc.toml  pyproject.toml  requirements.txt  requirements_doc.txt  simpleTest.py  terminal.py  versionTemplate.py
.github/workflows/: python-package-publish.yml  python-package-test.yml  python-package.yml
dev-requirements/: requirements-lint.txt  requirements-test.txt  requirements_doc.txt
doc/source/: changelog.rst  cli.rst  conf.py  index.rst
doc/source/_static/: buildInfo.html
doc/source/_templates/: package.rst_t
doc/source/_themes/ksphinx/: layout.html  localtoc.html  relations.html  search.html  searchbox.html  theme.toml
doc/source/_themes/ksphinx/static/: build_infos.js  k-sphinx-font.css  ksphinx.css  ksphinx.js
doc/source/_themes/ksphinx/static/highlight-style/: github-dark.css  github.css
doc/source/changelogs/: fromv1.rst  v2.1.0.rst  v2.1.2.rst  v2.1.3.rst  v2.2.0.rst  v2.2.3.rst  v2.3.0.rst
src/doFolder/: __init__.py  __main__.py  __pkginfo__.py  cli.py  compare.py  enums.py  env.py  exception.py  fileSystem.py  globalType.py  hashing.py  path.py  scripts.py  sort.py  warn.py
src/doFolder/cli/: __init__.py  __main__.py  compare.py  hash.py  main.py  util.py
src/doFolder/fileSystem/: __init__.py  classes.py  tools.py
src/doFolder/hashing/: __init__.py  cache.py  calculate.py  calculator.py  executor.py  util.py
testcases/: conftest.py  test_do_folder.py  test_filesystem.py
tools/: _cwd.py  buildDoc.py  getInfo.py
