[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doFolder"
description = "Manage files more easily"
authors = [
    { name = "kuankuan", email = "2163826131@qq.com" },
]
readme = "README.md"
license = "MulanPSL-2.0"
requires-python = ">=3.8"
dynamic = ["version"]

classifiers = [
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["folder", "file", "manage","filesystem",'directory']
dependencies = ["exceptiongroup", "typing_extensions>=4.10.0", "deprecated"]
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/kuankuan2007/do-folder"
Issues = "https://github.com/kuankuan2007/do-folder/issues"
Documentation = "https://do-folder.doc.kuankuan.site"

[tool.mypy]

python_version = "3.12"

exclude = [
    '^testcases\.py$',
]

[tool.setuptools.dynamic]
version = { attr = "doFolder.__pkginfo__.__version__" }
